<resources>
    //Name
    <string name="app_name">eWORK</string>

    //activity_login page
    <string name="loginText">Prisijungti</string>
    <string name="passText">Slaptažodis</string>
    <string name="emailText">El. pašto adresas</string>
    <string name="unregText">Neturite paskyros? Spauskite čia!</string>

    //activity_register_page
    <string name="goBack">Grįžti</string>
    <string name="pass2Text">Pakartokite slaptažodį</string>
    <string name="signedText">Turite paskyrą? Prisijunkite!</string>
    <string name="signInText">Registruotis</string>
    <string name="regName">Vardas</string>

    //navigatio_menu
    <string name="myProfile">Mano profilis</string>
    <string name="darbas">Darbas</string>
    <string name="settings">Nustatymai</string>
    <string name="logout">Atsijungti</string>
    <string name="mapTest">MapTesting</string>

    //profile_page
    <string name="profileLogout">Atsijungti</string>
    <string name="profileName">Vardas Pavardė</string>
    <string name="profileMail">E. Paštas</string>
    <string name="profileWorkStat">&#032;Darbas</string>
    <string name="profileDesc">Profilio nuotrauka</string>

    //activity_work_page
    <string name="workStart">Pradėti darbą</string>
    <string name="workStop">Baigti darbą</string>
    <string name="workTimeStarted">Darbas pradėtas: </string>
    <string name="workTimeStopped">Darbas baigtas: </string>
    <string name="workTimeTotal">Iš viso dirbta: </string>
    <string name="workTimeToday">Šiandien dirbta: </string>

    //activity_profile_settings
    <string name="profileSave">Išsaugoti</string>
    <string name="profileNameUpdate">Vardas</string>
    <string name="profileEmailUpdate">El. Paštas</string>
    <string name="profileUpdateHeader">Porfilio redagavimas</string>

    //activity_map
    <string name="inBounds">Ribose</string>
    <string name="notInBounds">Už ribų</string>
    <string name="Cancel">Atšaukti</string>
    <string name="open_location_settings">Atidaryti nustatymus</string>
    <string name="gps_network_not_enabled">GPS išjungtas</string>



    //error text
    <string name="emptyFieldMsg">Laukelis negali būti tūščias.</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="msg_location_service_not_started">Location Tracking Not Started</string>
    <string name="msg_location_service_started">Location Tracking Started</string>
    <string name="btn_label_refresh">Refresh</string>

</resources>
