<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/profileLogout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/profileDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="190dp"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/profileName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProfileMail"
        android:layout_width="190dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:text="@string/profileMail"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />

    <Button
        android:id="@+id/btnWorkStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="140dp"
        android:text="@string/profileWorkStat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>