<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainmenu"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="auto"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nav_account"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:text="@string/myProfile" />

        <View
            android:id="@+id/nav_acc_divider"
            style="@style/Divider" />

        <TextView
            android:id="@+id/nav_work"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:text="@string/darbas" />

        <View
            android:id="@+id/nav_work_divider"
            style="@style/Divider" />

        <TextView
            android:id="@+id/nav_mapTesting"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:text="@string/mapTest" />

        <View
            android:id="@+id/nav_map_divider"
            style="@style/Divider" />

        <TextView
            android:id="@+id/nav_settings"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:text="@string/settings" />

        <View
            android:id="@+id/nav_settings_divider"
            style="@style/Divider" />

        <TextView
            android:id="@+id/nav_logout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:text="@string/logout" />

        <View
            android:id="@+id/nav_logout_divider"
            style="@style/Divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/map_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context="com.example.polygons.PolyActivity" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>